[package]
name = "gfx_terrain"
version = "0.1.0"
authors = ["Erik Ytterberg <erik.ytterberg@learningwell.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.2"
image = "0.23.11"
itertools = "0.9.0"
vecmath = "1.0.0"
